dev user + gh from nix

--- a/0-dev/universal/Dockerfile
+++ b/0-dev/universal/Dockerfile
@@ -113,7 +113,7 @@ RUN if [ -z $DeveloperBuild ]; then \
     curl -sSL https://aka.ms/getvsdbgsh | bash /dev/stdin -v latest -l /vsdbg ; \
     fi
 
-# Custom ybor tooling
+# Custom Dev tooling
 FROM upgraded
 
 RUN --mount=type=cache,id=apt-cache,target=/var/cache/apt \
@@ -123,9 +123,9 @@ RUN --mount=type=cache,id=apt-cache,target=/var/cache/apt \
     direnv nix procps file git ssh sudo \
     && apt-get autoremove -y && apt-get clean -y \
     && useradd -U --uid 60000 --shell /bin/bash --create-home linuxbrew \
-    && useradd -U --uid 1000 --shell /bin/bash --create-home ybor \
+    && useradd -U --uid 1000 --shell /bin/bash --create-home dev \
     && echo 'linuxbrew ALL=(ALL) NOPASSWD:ALL' >> /etc/sudoers \
-    && echo 'ybor ALL=(ALL) NOPASSWD:ALL' >> /etc/sudoers
+    && echo 'dev ALL=(ALL) NOPASSWD:ALL' >> /etc/sudoers
 
 # Set global direnv config and nix PATH
 ENV DIRENV_CONFIG=/etc/direnv \
@@ -138,7 +138,8 @@ RUN --mount=type=cache,id=apt-cache,target=/var/cache/apt \
     --mount=type=cache,id=apt-lib,target=/var/lib/apt \
     --mount=type=cache,id=brew-cache,target=/home/linuxbrew/.linuxbrew/var/homebrew/cache \
     curl -fsSL "https://raw.githubusercontent.com/Homebrew/install/4407e35affd529b11904d9757aade0efddfce4db/install.sh" | bash \
-    && sudo apt-get autoremove -y && sudo apt-get clean -y
+    && sudo apt-get autoremove -y && sudo apt-get clean -y 
+# && brew tap archetect/tap && brew install archetect
 
 USER root
 WORKDIR /root
@@ -150,5 +151,6 @@ RUN --mount=type=cache,id=nix-cache,target=/root/.cache/nix \
 
 COPY etc /etc
 
-WORKDIR /
+USER dev
+WORKDIR /home/dev
 CMD [ "sleep", "infinity" ]
