--- a/0-dev/universal/Dockerfile
+++ b/0-dev/universal/Dockerfile
@@ -138,7 +138,8 @@ RUN --mount=type=cache,id=apt-cache,target=/var/cache/apt \
     --mount=type=cache,id=apt-lib,target=/var/lib/apt \
     --mount=type=cache,id=brew-cache,target=/home/linuxbrew/.linuxbrew/var/homebrew/cache \
     curl -fsSL "https://raw.githubusercontent.com/Homebrew/install/4407e35affd529b11904d9757aade0efddfce4db/install.sh" | bash \
-    && sudo apt-get autoremove -y && sudo apt-get clean -y 
+    && sudo apt-get autoremove -y && sudo apt-get clean -y \
+    && echo 'eval "$(/home/linuxbrew/.linuxbrew/bin/brew shellenv)"' | sudo tee /etc/profile.d/00-brew.sh
 # && brew tap archetect/tap && brew install archetect
 
 USER root
