--- a/0-debian/bookworm-slim/Dockerfile
+++ b/0-debian/bookworm-slim/Dockerfile
@@ -4,8 +4,12 @@ ARG CACHE_BUST
 ENV CACHE_BUST=${CACHE_BUST}
 ENV TZ=UTC
 
+# Apply the same updates as the upgraded stage
 RUN apt-get update && \
-    apt-get upgrade -y \
+    apt-get upgrade -y && \
+    DEBIAN_FRONTEND=noninteractive \
+    apt-get install -y \
+    debsums \
     && rm -rf /var/lib/apt/lists/*
 
 # Calculate the sum of all installed packages, which will override Dockercache if something changed
@@ -23,7 +27,10 @@ RUN echo "PKGSUM is $(cat /var/lib/dpkg/sha256sum)"
 
 # Apply the same updates as the upgraded stage
 RUN apt-get update && \
-    apt-get upgrade -y \
+    apt-get upgrade -y && \
+    DEBIAN_FRONTEND=noninteractive \
+    apt-get install -y \
+    debsums \
     && rm -rf /var/lib/apt/lists/*
 
 ENV BASE_IMAGE_MAINTAINER="ybor"
