--- a/0-debian/bookworm/Dockerfile
+++ b/0-debian/bookworm/Dockerfile
@@ -7,7 +7,7 @@ ENV TZ=UTC
 RUN apt-get update && \
     apt-get upgrade -y && \
     DEBIAN_FRONTEND=noninteractive \
-    apt-get install -y \
+    apt-get install -y --no-install-recommends \
     ca-certificates debsums gpg libssl-dev tzdata wget \
     && rm -rf /var/lib/apt/lists/*
 
@@ -28,7 +28,7 @@ RUN echo "PKGSUM is $(cat /var/lib/dpkg/sha256sum)"
 RUN apt-get update && \
     apt-get upgrade -y && \
     DEBIAN_FRONTEND=noninteractive \
-    apt-get install -y \
+    apt-get install -y --no-install-recommends \
     ca-certificates debsums gpg libssl-dev tzdata wget \
     && rm -rf /var/lib/apt/lists/*
 
