--- a/1-nginx/bullseye/Dockerfile
+++ b/1-nginx/bullseye/Dockerfile
@@ -6,7 +6,7 @@ ARG VERSION
 RUN echo "deb https://nginx.org/packages/debian/ bullseye nginx" >> /etc/apt/sources.list && \ 
     apt-key adv --keyserver keyserver.ubuntu.com --recv-keys ABF5BD827BD9BF62 && \
     apt-get update && \
-    apt-get install -y nginx=$VERSION.\* && \
+    apt-get install -y gnupg nginx=$VERSION.\* && \
     rm -rf /var/lib/apt/lists/*
 
 RUN ln -sf /dev/stdout /var/log/nginx/access.log
