--- a/0-dev/nix/Dockerfile
+++ b/0-dev/nix/Dockerfile
@@ -10,10 +10,15 @@ RUN apt-get update && apt-get install -y \
     sudo \
     git \
     bash \
+    direnv \
     && rm -rf /var/lib/apt/lists/*
 
 RUN useradd -m -s /bin/bash dev && \
     echo "dev ALL=(ALL) NOPASSWD:ALL" >> /etc/sudoers
+
+COPY etc /etc
+COPY .envrc /.envrc
+COPY default.nix /default.nix
 
 USER dev
 WORKDIR /home/dev
@@ -25,10 +30,9 @@ ENV NIX_PATH=/home/dev/.nix-defexpr/channels
 ENV PATH=/home/dev/.nix-profile/bin:/home/dev/.nix-profile/sbin:/home/dev/.nix-profile:/home/dev/.nix-profile/libexec:/home/dev/.nix-profile/libexec/nix:$PATH
 
 SHELL ["/bin/bash", "-c"]
+RUN direnv allow
 RUN echo ". /home/dev/.nix-profile/etc/profile.d/nix.sh" >> ~/.bashrc
 
 RUN . /home/dev/.nix-profile/etc/profile.d/nix.sh && nix --version
-ENTRYPOINT ["/bin/bash"]
-CMD ["sleep", "infinity"]
 
-COPY --chown=root:root _ /
+CMD [ "sleep", "infinity" ]
