--- a/0-dev/nix/etc/direnv/direnv.toml
+++ b/0-dev/nix/etc/direnv/direnv.toml
@@ -1,2 +1,12 @@
+[global]
+load_dotenv = true
+strict_env = false
+disable_stdin = false
+warn_timeout = "60s"
+log_format = ""
+bash_path = "/bin/bash"
+hide_env_diff = true
+disable_makefile = false
+
 [whitelist]
-prefix = ["/ede", "/home/dev"]
+prefix = ["/home/dev", "/ede/orgs"]
