update env wrapper

--- a/0-dev/nix/Dockerfile
+++ b/0-dev/nix/Dockerfile
@@ -44,8 +44,8 @@ RUN . /home/dev/.nix-profile/etc/profile.d/nix.sh && nix --version
 
 # Smoke test: validate default.nix syntax only
 RUN . /home/dev/.nix-profile/etc/profile.d/nix.sh && \
-    nix-instantiate --parse /default.nix > /dev/null && \
-    echo "✓ default.nix syntax validated"
+    nix-instantiate --parse /etc/nix/default.nix > /dev/null && \
+    echo "✓ /etc/nix/default.nix syntax validated"
 
 ENTRYPOINT [ "/bin/bash", "-l", "-c" ]
 CMD [ "sleep", "infinity" ]
