--- a/0-dev/nix/Dockerfile
+++ b/0-dev/nix/Dockerfile
@@ -28,8 +28,8 @@ WORKDIR /home/dev
 RUN curl -L https://nixos.org/nix/install | sh -s -- --no-daemon
 
 ENV USER=dev
-ENV DIRENV_ALLOW_NOALLOW=1
 ENV DIRENV_CONFIG=/etc/direnv
+ENV DIRENV_LOG_FORMAT=""
 
 SHELL ["/bin/bash", "-c"]
 RUN rm /home/dev/.nix-defexpr/channels_root && \
