--- a/0-ede/nix/Dockerfile
+++ b/0-ede/nix/Dockerfile
@@ -4,6 +4,7 @@ RUN apt-get update && apt-get install -y \
     acl \
     bash \
     ca-certificates \
+    libssl-dev \
     curl \
     git \
     gnupg \
