--- a/0-ede/nix/Dockerfile
+++ b/0-ede/nix/Dockerfile
@@ -14,10 +14,9 @@ RUN apt-get update && apt-get install -y \
     jq \
     && rm -rf /var/lib/apt/lists/* \
     && apt-get clean \
-    && usermod -l ede -d /ede -m -u 1000 -c "ede" -g staff ubuntu \
-    && groupdel ubuntu \
     && groupadd -g 2375 docker \
-    && usermod -aG docker ede \
+    && usermod -l ede -d /ede -m -u 1000 -c "ede" -g staff -aG docker ubuntu \
+    && groupdel ubuntu \
     && mkdir -p -m 6755 /nix /ede /state \
     && chown ede:staff /nix /ede /state \
     && echo "ede ALL=(ALL) NOPASSWD: ALL" > /etc/sudoers.d/ede \
