--- a/.github/workflows/build-push.yaml
+++ b/.github/workflows/build-push.yaml
@@ -317,6 +317,13 @@ jobs:
           #   builder_image_tag_arg: "" # unused
           #   image_tag_arg: "bullseye" # latest version of rust
           #   variants: "linux/amd64,linux/arm64"
+          - name: archetect
+            dockerfile: 2-archetect/bullseye/Dockerfile
+            context: 2-archetect/bullseye
+            version_tag: "" # unused
+            builder_image_tag_arg: "" # unused
+            image_tag_arg: "" # unused
+            variants: "linux/amd64,linux/arm64"
           - name: cloudflared
             version_tag: "2025"
             dockerfile: 2-cloudflared/bullseye/Dockerfile
